<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingRight="10dip" 
    android:layout_gravity="center">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip"
        style="?android:attr/buttonBarStyle">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/open_button"
            android:layout_weight="1"
            android:text="@string/open_button_label"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/stat_button"
            android:text="@string/stat_button_label"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
    <TextView 
        android:id="@+id/file_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/file_default_name"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:id="@+id/header_table"
        >
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:text="@string/table_header_time"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:text="@string/table_header_x"/>       
            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center_horizontal"
                android:text="@string/table_header_y"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center_horizontal"
                android:text="@string/table_header_z"/>
            </TableRow>
    </TableLayout>
    <ScrollView
        android:background="@drawable/back"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/view_data_outer_view"
        android:layout_marginBottom="20dp"
        >
    </ScrollView>
</LinearLayout>