<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginRight = "25dp"
        android:layout_marginLeft="25dp"
        android:id="@+id/dm_current_motion_view"
        android:text="@string/dm_current_motion_view_default_text"
        android:background="@drawable/back"
        android:textSize="40sp" />   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dm_current_motion_detail_view_title"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dm_history_motion_view_title"
            />        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <ScrollView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:id="@+id/dm_current_motion_detail_view"/>
        </ScrollView>
        <ScrollView 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/dm_history_motion_scroll">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:id="@+id/dm_history_motion_view"/>            
        </ScrollView>
    </LinearLayout>
   	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dip"      
        android:layout_gravity="center"
        style="?android:attr/buttonBarStyle" >
        <Button 
            android:id="@+id/dm_start_button"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:text="@string/start_button_label"
            android:layout_marginRight="10dip"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button 
            android:id="@+id/dm_stop_button"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"         
            android:text="@string/stop_button_label"
            style="?android:attr/buttonBarButtonStyle"/>        
    </LinearLayout>
</LinearLayout>