<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"        
        >
        <Button 
            android:id="@+id/start_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/start_button_label"/>
        <Spinner
       	 	android:id="@+id/select_action"
        	android:layout_width="0dip"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:entries="@array/action_arrays"
        	android:prompt="@string/action_prompt" />
        <Button 
            android:id="@+id/stop_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"            
            android:text="@string/stop_button_label"/>        
    </LinearLayout>
    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dip"
	    android:paddingRight="20dip"
	    android:layout_marginBottom="20dip"
        >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:id="@+id/accelerometer_view"
	        android:layout_width="wrap_content"	        
	        >
	    </TextView>
    </ScrollView>
<!--     <TextView  -->
<!--         android:layout_height="wrap_content" -->
<!--         android:paddingLeft="20dip" -->
<!--         android:paddingRight="20dip" -->
<!--         android:layout_gravity="center" -->
<!--         android:id="@+id/lightsensor_view" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_marginBottom="10dip"         -->
<!--         > -->
<!--     </TextView> -->
        

</LinearLayout>
