<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:textSize="200sp"
        android:gravity="center"
        android:id="@+id/rp_count_down_view"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_pattern_fragment_filename"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>
            <EditText
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:id="@+id/record_pattern_frament_filename_input"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >
             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_pattern_fragment_filelength"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>  
             <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:id="@+id/record_pattern_fragment_length_spinner"  
                android:entries="@array/length_spinner_entries"
                android:defaultValue="30"
                android:entryValues="@array/length_spinner_entry_values" />        
        </TableRow>  
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >
             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_pattern_fragment_delay"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>      
             <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:id="@+id/record_pattern_fragment_delay_spinner"  
                android:entries="@array/delay_spinner_entries"
                android:defaultValue="2"
                android:entryValues="@array/delay_spinner_entry_values"/>                    
        </TableRow>                   
    </TableLayout>
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:id="@+id/record_pattern_fragment_infoview"/>
    </ScrollView>
   	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dip"      
        android:layout_gravity="center"
        style="?android:attr/buttonBarStyle" >
        <Button 
            android:id="@+id/rp_start_button"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:text="@string/start_button_label"
            android:layout_marginRight="10dip"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button 
            android:id="@+id/rp_stop_button"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"         
            android:text="@string/stop_button_label"
            style="?android:attr/buttonBarButtonStyle"/>        
    </LinearLayout>    
</LinearLayout>